--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
+    "@svgr/webpack": "^8.1.0",
     "@vercel/analytics": "^1.3.1",
     "clsx": "^2.1.1",
     "core-js": "^3.38.1",
     "framer-motion": "^11.2.12",
     "mini-svg-data-uri": "^1.4.4",
+    "negotiator": "^0.6.3",
     "next": "^14.2.13",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
