--- a/package.json
+++ b/package.json
@@ -9,34 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.107.0",
-    "@react-three/fiber": "^8.16.8",
-    "@vercel/analytics": "^1.3.1",
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.1.0",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
-    "core-js": "^3.38.1",
-    "framer-motion": "^11.2.12",
+    "core-js": "^3.41.0",
+    "framer-motion": "^12.5.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "^14.2.13",
+    "next": "^15.2.2",
     "next-sitemap": "^4.2.3",
-    "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.2.1",
-    "react-lottie": "^1.2.4",
-    "tailwind-merge": "^2.3.0",
+    "next-themes": "^0.4.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-lottie": "^1.2.10",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.165.0",
-    "three-globe": "^2.31.1"
+    "three": "^0.174.0",
+    "three-globe": "^2.42.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@tailwindcss/postcss": "^4.0.13",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@types/react-lottie": "^1.2.10",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "eslint": "^9.22.0",
+    "eslint-config-next": "15.2.2",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.13",
+    "typescript": "^5.8.2"
   }
 }
