--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.1.0",
     "@vercel/analytics": "^1.5.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "core-js": "^3.41.0",
     "framer-motion": "^12.5.0",
+    "lucide-react": "^0.479.0",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.5.0",
     "next": "^15.2.2",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
