--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-lottie": "^1.2.10",
+    "@types/three": "^0.174.0",
     "eslint": "^9.22.0",
     "eslint-config-next": "15.2.2",
     "postcss": "^8.5.3",
